<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/popup_back"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel2"
            android:paddingBottom="5dp"
            android:text="@string/stats"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/closeStats"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/close"
            android:elevation="1dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pixel2"
                android:paddingBottom="5dp"
                android:text="@string/mode"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pixel2"
                android:paddingBottom="5dp"
                android:text="@string/highscore"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/totalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pixel2"
                android:paddingBottom="5dp"
                android:text="@string/total_score"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/gamesPlayed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pixel2"
                android:paddingBottom="5dp"
                android:text="@string/games_played"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pixel2"
                android:paddingBottom="5dp"
                android:text="@string/average"
                android:textColor="@android:color/black"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
