<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/popup_back"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel2"
            android:paddingBottom="5dp"
            android:text="@string/mode"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/closeGameMode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/close"
            android:elevation="1dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/classic"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/classic"
                android:textColor="@color/colorAccentDark"
                android:textSize="30dp" />

            <Button
                android:id="@+id/no_walls"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/no_walls"
                android:textColor="@color/colorAccentDark"
                android:textSize="30dp" />

            <Button
                android:id="@+id/foodx3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/_3_x_food"
                android:textColor="@color/colorAccentDark"
                android:textSize="30dp" />

            <Button
                android:id="@+id/foodx5"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/_5_x_food"
                android:textColor="@color/colorAccentDark"
                android:textSize="30dp" />

            <Button
                android:id="@+id/practice"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/practice"
                android:textColor="@color/colorAccentDark"
                android:textSize="30dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
