<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/popup_back"
    android:orientation="vertical"
    android:paddingTop="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/pixel2"
            android:paddingBottom="5dp"
            android:text="@string/skin"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/closeStats"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/close"
            android:elevation="1dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:id="@+id/red"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#ff0000"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/red"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/green"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#00ff00"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/green"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blue"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#0000ff"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/blue"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:id="@+id/yellow"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#ffff00"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/yellow"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cyan"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#00ffff"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/cyan"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/magenta"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#ff00ff"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/magenta"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:id="@+id/orange"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#ff7d00"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/orange"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/violet"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#7d007d"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/violet"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/brown"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#7d3e00"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/brown"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:id="@+id/black"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#000000"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/black"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gray"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#7d7d7d"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/gray"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/white"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="#ffffff"
                        android:src="@drawable/color_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pixel2"
                        android:text="@string/white"
                        android:textColor="@android:color/black"
                        android:textSize="15dp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
