<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/popup_back"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pixel2"
            android:paddingBottom="5dp"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/closeDialog"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/close"
            android:elevation="1dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/audio" />

                <SeekBar
                    android:id="@+id/audioBar"
                    style="@android:style/Widget.Material.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:progressTint="@android:color/black"
                    android:thumbTint="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/music" />

                <SeekBar
                    android:id="@+id/musicBar"
                    style="@android:style/Widget.Material.SeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:progressTint="@android:color/black"
                    android:thumbTint="@android:color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/changeLang"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/lang_change"
                android:textColor="@color/colorAccentDark"
                android:textSize="20dp" />

            <Button
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_back"
                android:fontFamily="@font/pixel2"
                android:text="@string/instructions"
                android:textColor="@color/colorAccentDark"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

